# tagme

./: .gitignore  Cargo.toml  drag-drop.css  input.css  package-lock.json  package.json  styles.css  test_db.rs
.claude/: settings.local.json
.github/workflows/: release.yml
leptos-dragdrop/: Cargo.toml
leptos-dragdrop/src/: lib.rs
leptos-recommender/src/: lib.rs
leptos-updater/: Cargo.toml
leptos-updater/src/: lib.rs
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  db.rs  lib.rs
src/app/: api.rs  drag_drop.rs  files.rs  layout.rs  overlay.rs  recommendation.rs  resizing.rs  sorting.rs  types.rs  update.rs  utils.rs
src/app/components/: file_list.rs  mod.rs  tag_tree.rs
updater-flow/: Cargo.toml
updater-flow/src/: lib.rs
