[package]
name = "leptos-dragdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "MouseEvent", "HtmlElement", "DomRect", "Event"] }
js-sys = "0.3"
